--- a/src/scss/screen.scss
+++ b/src/scss/screen.scss
@@ -1,4 +1,5 @@
 @import "variables/**/*";
 @import "libraries/**/*";
+@import "hamburgers/hamburgers";
 @import "fonts/**/*";
 @import "redesign/**/*";
