--- a/src/scss/redesign/_home-hero.scss
+++ b/src/scss/redesign/_home-hero.scss
@@ -73,7 +73,7 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
 
      &:before, &:after {
         display: none;
@@ -266,12 +266,14 @@
       bottom: unset;
       right: unset;
       text-align: left;
+      margin-bottom: 2rem;
       width: auto;
 
       @media (max-width: 991px) {
         position: absolute;
         bottom: -30px;
         left: 15px;
+        margin-bottom: 0;
       }
 
       li {
