Add modal window to 'check availability' button on weddings cc page

--- a/src/scss/redesign/_button.scss
+++ b/src/scss/redesign/_button.scss
@@ -18,5 +18,13 @@
 
     &.button--teal {
         background-color: $teal;
+        border: 2px solid $teal;
+        transition: all .15s ease-out;
+
+        &:hover {
+            background-color: white;
+            color: $teal;
+            text-decoration: none;
+        }
     }
 }
