Amends to c&c header example

--- a/src/scss/redesign/_booking-mask.scss
+++ b/src/scss/redesign/_booking-mask.scss
@@ -17,6 +17,12 @@
 }
 
 .book-now {
+    .book-now-button {
+        margin-left: auto;
+    }
+}
+
+.book-now {
     &.open {
         .book-now-button {
             .closed {
