--- a/src/scss/redesign/_home-hero.scss
+++ b/src/scss/redesign/_home-hero.scss
@@ -262,7 +262,7 @@
     }
 
     .slick-dots {
-      position: relative;
+      position: absolute;
       bottom: unset;
       right: unset;
       text-align: left;
